--- a/package.json
+++ b/package.json
@@ -13,5 +13,8 @@
   "devDependencies": {
     "nodemon": "3.1.9",
     "standard": "17.1.2"
+  },
+  "dependencies": {
+    "cors": "^2.8.5"
   }
 }
