--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "standard": "17.1.2"
   },
   "dependencies": {
-    "cors": "^2.8.5"
+    "cors": "^2.8.5",
+    "express": "^4.21.2"
   }
 }
